Specify package version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-fastapi
-httpx
-pydantic
-pydantic-settings
-aiofiles
-uvicorn
-python-multipart
-pyyaml
-langchain-openai
-langchain-core
-langchain-community
-langgraph
-typing-extensions
-wikipedia
-prettytable
-requests
-Pillow
+fastapi==0.116.1
+httpx==0.28.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
+aiofiles==24.1.0
+uvicorn==0.35.0
+python-multipart==0.0.20
+pyyaml==6.0.2
+langchain-openai==0.3.30
+langchain-core==0.3.74
+langchain-community==0.3.27
+langgraph==0.6.6
+typing-extensions==4.14.1
+wikipedia==1.4.0
+prettytable==3.16.0
+requests==2.32.5
+Pillow==11.3.0
